ghost_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  labels:
    name: ghost
    app: frontend
    purpose: appserver
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ghost
  template:
    metadata:
      name: ghost
      labels:
        name: ghost
        app: frontend
        purpose: appserver
    spec:
      containers:
        - name: ghost
          imagePullPolicy: IfNotPresent
          image: ghost:3.40.1
          resources:
           requests:
                cpu: 200m
                memory: 512m
          ports:
            - name: ghost-port
              containerPort: 2368
          volumeMounts:
            - name: ghost-data
              mountPath: "/var/lib/ghost/contents"
      volumes:
        - name: ghost-data
          persistentVolumeClaim:
            claimName: ghost-pvc
