mysql_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    name: mysql
    app: database
    purpose: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mysql
  template:
    metadata:
      name: mysql
      labels:
        name: mysql
        app: database
        purpose: storage
    spec:
      containers:
        - name: mysql
          image: mysql:5.7.32
          resources:
           requests:
                cpu: 200m
                memory: 512m
          ports:
            - name: mysql-port
              containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: "/var/lib/mysql"
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
