service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    name: mysql
  ports:
    - port: 3306
      name: mysql-only
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  selector:
    name: ghost
  ports:
    - port: 80
      targetPort: 2368
      name: ghost
