ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost
spec:
  tls:
    - hosts: 
      - wallpaper.local
      secretName: tlsenabled
  rules:
  - host: wallpaper.local
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: ghost
            port:
              number: 80
